Fix: Refactor CorsConfig to be more robust and fix build errors